# COPG-VD

./: CMakeLists.txt  COPG.json  LICENSE  README.md  action.sh  changelog.md  config.json  cpuinfo_spoof  customize.sh  fakecpu.sh  ignorelist.txt  jq-armv7a-linux-androideabi  list.json  repo.json  repo.yaml  sepolicy.rule  service.sh  spoof_module.c  spoof_module.cpp  spoof_module.cpp.baak  spoof_module.cpp.bak  system.prop  unified_controller.cpp  uninstall.sh  update.json  update_config.sh
.github/workflows/: COPG-VD.yml  COPG.yml  JSON  build  build.yml  builder  builder.yml  config-watcher.yml  cpu.yml  inotify-tools.yml  jq  jq.yml  live.yml  main.yml  new.yml  test  test.yaml  test.yml  up.json  up.yml  update  update.yml  x-watcher.yml
module/: COPG-VD.json.example  COPG.json  COPG.json.example  customize.sh  list.json  post-fs-data.sh  service.sh  update.json  utils.sh
module/webroot/: config.json  index.html  scripts.js  styles.css
src/: config-watcher.c
webroot/: config.json  icon.bak  index.html  scripts.js  styles.css
zygisk/: spoof_module.cpp
